feature: add AppSetting entity and GitHub Issues URL button (#5)
* Add AppSetting entity and GitHub Issues URL button

* Set ligatures to false

---------
